--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -12,8 +12,8 @@ body{
     margin: 0;
 }
 .bg-text {
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0, 0.4); 
     color: white;
     font-weight: bold;
     border: 3px solid #f1f1f1;
